--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
-Django >=1.8.8, < 1.9
-djangorestframework == 3.1.0
-requests
-markdown
+Django==1.8.10
+djangorestframework==3.1.0
+Markdown==2.6.5
+mysqlclient==1.3.7
+requests==2.9.1
+wheel==0.29.0
